route_tables.tf
resource "aws_route_table" "task_public_route_table" {
  vpc_id = aws_vpc.task-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.task-gw.id
  }

  tags = {
    Name = "task_public_route_table"
  }
}

resource "aws_route_table_association" "public_route_table_assoc" {
  subnet_id      = aws_subnet.task_public_subnet_1.id
  route_table_id = aws_route_table.task_public_route_table.id
}
